feat: rate기반 추천 API TEST 구현 완료 (#37)
평점 기반 추천 테스트용 API 작성을 완료했습니다.